// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Pre-deployment validation for Azure readiness. Run deep checks on configuration, infrastructure, permissions, and prerequisites before deploying. WHEN: "validate my app", "check deployment readiness", "run preflight checks", "verify configuration", "validate azure.yaml", "validate Bicep", "troubleshoot deployment errors", "validate Azure Functions".",
  "extractedKeywords": [
    "azure",
    "before",
    "bicep",
    "check",
    "checks",
    "configuration",
    "deep",
    "deploy",
    "deploying",
    "deployment",
    "errors",
    "functions",
    "infrastructure",
    "permissions",
    "pre-deployment",
    "preflight",
    "prerequisites",
    "readiness",
    "terraform",
    "troubleshoot",
    "validate",
    "validation",
    "verify",
    "when",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "azure",
  "before",
  "bicep",
  "check",
  "checks",
  "configuration",
  "deep",
  "deploy",
  "deploying",
  "deployment",
  "errors",
  "functions",
  "infrastructure",
  "permissions",
  "pre-deployment",
  "preflight",
  "prerequisites",
  "readiness",
  "terraform",
  "troubleshoot",
  "validate",
  "validation",
  "verify",
  "when",
  "yaml",
]
`;
